# trace-scope

./: .gitignore  CLAUDE.md  README.md  agent.py  case7_fixture.txt  costs.py  db.py  judge-check-2026-04-19T08-29-22.md  judge.py  main.py  pyproject.toml  report.py  results-archive.txt  schema.sql  serve.py  tool_use.py
data/: __init__.py  dataset.py  golden_dataset.py
evals/: __main__.py  compare.py  judge_precision_recall.py  judge_stability.py  report_from_db.py  run_eval.py
migrations/: 002_traces.sql  003_calibration.sql  004_judge_pr.sql  005_judge_prompts.sql  006_review_annotations.sql
results/: compare-1-vs-1-2026-04-24T21-07-39.md  compare-2-vs-3-2026-04-25T07-50-05.md  judge-check-2026-04-21T17-46-24.md  judge-check-2026-04-21T19-57-33.md  judge-pr-2026-04-19T08-56-30.md  judge-pr-2026-04-19T14-41-53.md  judge-pr-2026-04-21T17-48-57.md  judge-pr-2026-04-22T21-09-09.md  judge-pr-correctness-2026-04-25T08-37-19.md  judge-pr-correctness-2026-04-25T09-20-28.md  judge-pr-correctness-2026-04-25T17-12-04.md  results-2026-04-19T08-10-32.md  results-2026-04-21T06-53-25.md  results-2026-04-21T17-41-25.md  results-2026-04-21T20-04-41.md  results-2026-04-22T16-31-40.md  results-2026-04-22T16-39-23.md  results-2026-04-22T16-46-13.md  results-2026-04-22T17-19-30.md  results-2026-04-22T17-24-09.md  results-2026-04-22T21-01-15.md  results-2026-04-22T21-05-14.md  results-2026-04-24T21-04-59.md  results-2026-04-24T21-07-51.md  results-2026-04-25T07-33-48.md  results-2026-04-25T07-34-11.md  results-2026-04-25T07-49-19.md  results-2026-04-26T09-52-23.md  (+2 more)
ui/: README.md  (+3 more)
(+38 files in other folders)
